<resources>
    <string name="app_name">Qola</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="qodrat_laundry">QODRAT LAUNDRY</string>
    <string name="qola">QOLA</string>
    <string name="login">LOGIN</string>
    <string name="register">DAFTAR</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="pilih_layanan">Pilih Layanan</string>
    <string name="layanan">PILIH LAYANAN</string>
    <string name="status_laundry">Status Laundry</string>
    <string name="laundry">STATUS LAUNDRY</string>
    <string name="cuci">CUCI</string>
    <string name="cuci_lipat">CUCI LIPAT</string>
    <string name="cuci_setrika">CUCI SETRIKA</string>
    <string name="setrika">SETRIKA</string>
    <string name="diambil">DIAMBIL</string>
    <string name="dicuci">DICUCI</string>
    <string name="disetrika">DISETRIKA</string>
    <string name="diantar">DIANTAR</string>
    <string name="masukkan_keterangan">MASUKKAN KETERANGAN</string>
    <string name="barang">Jenis Barang</string>
    <string name="paket">Paket Laundry</string>
    <string name="antar_jemput">Antar Jemput</string>
    <string name="berat">Berat</string>
    <string name="qopay">QOPAY</string>
    <string name="masukan_pin">Masukan PIN</string>
    <string name="masukkan_pin">MASUKKAN PIN</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="total">TOTAL</string>
    <string name="harga">0</string>
    <string name="pembayaran">PILIH METODE PEMBAYARAN</string>
    <string name="cod">COD</string>
    <string name="method">PILIH METODE</string>
    <string name="pembayarannya">PEMBAYARAN</string>
    <string name="berhasil">BERHASIL</string>
    <string name="lihat_status">LIHAT STATUS</string>
    <string name="kembali">KEMBALI</string>
    <string name="lanjutkan">LANJUTKAN</string>


    <string-array name="jenis_barang">
        <item>Pakaian Rp3500</item>
        <item>Selimut/Sprei Rp5000</item>
        <item>Gorden Rp7000</item>
    </string-array>

    <string-array name="paket_laundry">
        <item>Express (2 Jam) + Rp1500</item>
        <item>Reguler (3 Hari) Rp0</item>
    </string-array>

    <string-array name="antar_jemput">
        <item>Ya + Rp5000</item>
        <item>Tidak Rp0</item>
    </string-array>

    <string-array name="berat">
        <item>1 Kg + Rp5000</item>
        <item> >1Kg x setiap Kg</item>
    </string-array>


    <string name="total_harga_text">Total harga: %d</string>



</resources>