<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".RegisterFragment">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="330dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/logo"
        android:importantForAccessibility="no" />

    <ImageView
        android:id="@+id/iv_back_register"
        android:layout_width="35sp"
        android:layout_height="35sp"
        android:src="@drawable/back_black"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:importantForAccessibility="no" />

    <LinearLayout
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/iv_back_register"
        android:padding="30dp"
        android:layout_marginTop="-20dp"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_qola"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qola"
            android:textStyle="bold"
            android:fontFamily="@font/yusei_magic"
            android:textSize="50sp"
            android:textColor="@color/white"/>

        <ImageView
            android:id="@+id/img"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:src="@drawable/img"
            android:layout_marginBottom="20dp"
            android:importantForAccessibility="no" />

        <EditText
            android:id="@+id/ed_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edittext"
            android:drawableEnd="@drawable/name"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:minHeight="55dp"
            android:padding="10dp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/ed_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edittext"
            android:drawableEnd="@drawable/email"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="16dp"
            android:minHeight="55dp"
            android:padding="10dp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/ed_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edittext"
            android:drawableEnd="@drawable/person"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:layout_marginTop="16dp"
            android:minHeight="55dp"
            android:padding="10dp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_edittext"
            android:drawableEnd="@drawable/password"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="55dp"
            android:padding="10dp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/ed_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_edittext"
            android:drawableEnd="@drawable/confirm"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:minHeight="55dp"
            android:padding="10dp"
            android:importantForAutofill="no" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login_registerFragment"
            android:layout_width="280sp"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:text="@string/login"
            android:textStyle="bold"
            android:textSize="20sp"
            android:fontFamily="@font/yusei_magic"
            android:textColor="@android:color/black"
            android:background="@drawable/card"/>
    </LinearLayout>
</RelativeLayout>