<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".StatusFragment">
    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="330dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/logo"
        android:importantForAccessibility="no" />

    <ImageView
        android:id="@+id/iv_back_status"
        android:layout_width="35sp"
        android:layout_height="35sp"
        android:src="@drawable/back_black"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:importantForAccessibility="no" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="750dp"
            android:layout_gravity="bottom"
            android:background="@drawable/card_blue"
            android:layout_centerVertical="true"
            tools:ignore="UselessParent">
            <TextView
                android:id="@+id/tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qopay"
                android:fontFamily="@font/yusei_magic"
                android:textSize="40sp"
                android:layout_marginTop="30dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginBottom="30dp"
                android:layout_centerHorizontal="true">
            </TextView>

            <ImageView
                android:id="@+id/checklist"
                android:layout_below="@id/tv"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/checklist"
                android:importantForAccessibility="no" />

            <TextView
                android:id="@+id/tv_pembayaran"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pembayarannya"
                android:fontFamily="@font/yusei_magic"
                android:textSize="40sp"
                android:layout_below="@id/checklist"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginBottom="30dp"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/tv_berhasil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/berhasil"
                android:fontFamily="@font/yusei_magic"
                android:textSize="40sp"
                android:layout_below="@id/tv_pembayaran"
                android:layout_marginTop="-30dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginBottom="30dp"
                android:layout_centerHorizontal="true"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="280dp"
                android:layout_height="60dp"
                android:id="@+id/btn_lihat_status"
                android:layout_marginTop="460sp"
                android:text="@string/lihat_status"
                android:textStyle="bold"
                android:textSize="20sp"
                android:fontFamily="@font/yusei_magic"
                android:background="@drawable/card"
                android:textColor="@android:color/black"
                android:backgroundTint="@android:color/white"
                android:layout_centerHorizontal="true"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="280dp"
                android:layout_height="60dp"
                android:id="@+id/btn_kembali"
                android:layout_marginTop="15sp"
                android:text="@string/kembali"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_below="@id/btn_lihat_status"
                android:fontFamily="@font/yusei_magic"
                android:background="@drawable/card"
                android:textColor="@android:color/black"
                android:backgroundTint="@android:color/white"
                android:layout_centerHorizontal="true"
                />

        </RelativeLayout>

    </RelativeLayout>



</RelativeLayout>